prevent sidebar toggle flicker, make BG color more compatible with default midnight map colors

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body, #map {
   height: 100%;
   width: 100%;
   overflow: hidden; /* workaround for #373 */
-  background: #000;
+  background: #0e3d4e;
 }
 
 body {
@@ -50,6 +50,7 @@ body {
   border-right: none;
   border-radius: 5px 0 0 5px;
   text-decoration: none;
+  right: 301px; /* overwritten later by the script with SIDEBAR_WIDTH */
 }
 
 .enl {
